# xquiz

./: .gitignore  Makefile.am  README.md  configure.ac  xquiz-bank.dtd  xquiz.dtd  xquiz.spec
docs/: xquiz-1.0.0.ent  xquiz-1.1.0.dtd  xquiz-1.2.0.dtd  xquiz-2.0.0.dtd  xquiz-2.0.0.xsd  xquiz-bank-1.1.0.dtd  xquiz-bank-1.2.0.dtd  xquiz-bank-2.0.0.dtd  xquiz-bank-2.0.0.xsd  xquiz-html-1.0.0.dtd  xquiz-html-1.0.0.xsd  xquiz-instance-1.0.0.dtd  xquiz-instance-1.0.0.xsd
examples/: bank.xml  quiz.xml
include/: xquiz.h
src/: libquiz.cpp  printbank.cpp  testgen.cpp
vs/: xquiz.sln
vs/libxquiz/: dllmain.cpp  libxquiz.vcxproj  libxquiz.vcxproj.filters
vs/xquiz-gen/: xquiz-gen.vcxproj  xquiz-gen.vcxproj.filters
vs/xquiz-installer/: xquiz-installer.vdproj
vs/xquiz-printbank/: xquiz-printbank.vcxproj  xquiz-printbank.vcxproj.filters
